--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
