--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "with-redux",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node server",
     "build": "next build",
     "start": "next start",
     "start-express-d": "cross-env NODE_ENV=dev node server.js",
